--- a/getdelays.be/Views/User/MakeChangeInformation.cshtml
+++ b/getdelays.be/Views/User/MakeChangeInformation.cshtml
@@ -1,4 +1,4 @@
-﻿@using getdelays.be.Models.POCO;
+﻿@using GetDelaysAPI;
 @{
     ViewBag.Title = "Change your informations";
     User u = ViewBag.user;
