--- a/getdelays.be/Views/Connection/GetConnection.cshtml
+++ b/getdelays.be/Views/Connection/GetConnection.cshtml
@@ -1,12 +1,10 @@
-﻿@using GoogleAPI;
-@using SNCBAPI;
-@using GETDELAYSAPI;
+﻿@using GetDelaysAPI;
 
 @{
-    DataApiConnection s = ViewBag.Connection;
+     List<Connection> connections = ViewBag.Connection;
 }
 
-<h2> From @s.connection.First().departure.station to @s.connection.First().arrival.station</h2>
+<h2> From @connections.First().departure.station to @connections.First().arrival.station</h2>
 <p>Connections:</p>
 <div>
     <table class="tableco">
@@ -16,11 +14,10 @@
                 <td>Time</td>
                 <td>Delay</td>
                 <td>Number of changes</td>
-                <td>Platform</td>
                 <td>Train</td>
             </tr>
         </thead>
-        @foreach (Connection c in s.connection)
+        @foreach (Connection c in connections)
         {
             int nbr;
             if (c.vias == null)
@@ -29,22 +26,20 @@
             }
             else
             {
-                nbr = c.vias.via.Count();
+                nbr = c.vias.Count();
             }
             <tbody>
                 <tr>
                     <td>From: @Html.ActionLink(c.departure.station, "GetStationsByName", "Station", routeValues: new { station = c.departure.station }, htmlAttributes: null)</td>
-                    <td>@c.departure.tForView</td>
+                    <td>@c.departure.time</td>
                     <td>@c.departure.delay minutes</td>
                     <td rowspan="2">@nbr</td>
-                    <td>@c.departure.platform</td>
                     <td>@Html.ActionLink(c.departure.vehicle, "GetTrain", "Train", routeValues: new { idTrain = c.departure.vehicle }, htmlAttributes: null)</td>
                 </tr>
                 <tr>
                     <td>To: @Html.ActionLink(c.arrival.station, "GetStationsByName", "Station", routeValues: new { station = c.arrival.station }, htmlAttributes: null)</td>
-                    <td>@c.arrival.tForView</td>
+                    <td>@c.arrival.time</td>
                     <td>@c.arrival.delay minutes</td>
-                    <td>@c.arrival.platform</td>
                     <td>@Html.ActionLink(c.arrival.vehicle, "GetTrain", "Train", routeValues: new { idTrain = c.arrival.vehicle }, htmlAttributes: null)</td>
                 </tr>
             </tbody>
