--- a/getdelays.be/Views/Connection/SearchConnection.cshtml
+++ b/getdelays.be/Views/Connection/SearchConnection.cshtml
@@ -1,6 +1,4 @@
-﻿@using GoogleAPI;
-@using SNCBAPI;
-@using GETDELAYSAPI;
+﻿@using GetDelaysAPI;
 
 @{
     ViewBag.Title = "SearchConection";
@@ -16,7 +14,7 @@
         </li>
         @foreach (Station s in stat)
         {
-            <li class="stationFrom" style="display:none" onclick="SelectStation('@s.name','from')"><a href="#">@s.name</a></li>
+            <li class="stationFrom" style="display:none" onclick="SelectStation('@s.stationinfo.name','from')"><a href="#">@s.stationinfo.name</a></li>
         }
     </ul>
     <ul>
@@ -25,7 +23,7 @@
         </li>
         @foreach (Station s in stat)
         {
-            <li class="stationTo" style="display:none" onclick="SelectStation('@s.name','to')"><a href="#">@s.name</a></li>
+            <li class="stationTo" style="display:none" onclick="SelectStation('@s.stationinfo.name','to')"><a href="#">@s.stationinfo.name</a></li>
         }
     </ul>
     <input type="submit" value="submit" />
