implementation of the api working at 75%

--- a/getdelays.be/Views/Connection/GetConnection.cshtml
+++ b/getdelays.be/Views/Connection/GetConnection.cshtml
@@ -1,7 +1,7 @@
 ﻿@using GetDelaysAPI;
 
 @{
-     List<Connection> connections = ViewBag.Connection;
+     List<Connection> connections = ViewBag.Connections;
 }
 
 <h2> From @connections.First().departure.station to @connections.First().arrival.station</h2>
