--- a/getdelays.be/Views/Connection/SearchConnection.cshtml
+++ b/getdelays.be/Views/Connection/SearchConnection.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "SearchConection";
-    List<Station> stat = ViewBag.s;
+    List<StationData> stat = ViewBag.s;
 }
 
 <h2>Search a connection</h2>
@@ -12,18 +12,18 @@
         <li id="searchFrom">
             From:<input type="text" id="statFrom" name="dep" onkeydown="ListStationFrom()" />
         </li>
-        @foreach (Station s in stat)
+        @foreach (StationData s in stat)
         {
-            <li class="stationFrom" style="display:none" onclick="SelectStation('@s.stationinfo.name','from')"><a href="#">@s.stationinfo.name</a></li>
+            <li class="stationFrom" style="display:none" onclick="SelectStation('@s.name','from')"><a href="#">@s.name</a></li>
         }
     </ul>
     <ul>
         <li id="searchTo">
             to:<input type="text" id="statTo" name="arr" onkeydown="ListStationTo()" />
         </li>
-        @foreach (Station s in stat)
+        @foreach (StationData s in stat)
         {
-            <li class="stationTo" style="display:none" onclick="SelectStation('@s.stationinfo.name','to')"><a href="#">@s.stationinfo.name</a></li>
+            <li class="stationTo" style="display:none" onclick="SelectStation('@s.name','to')"><a href="#">@s.name</a></li>
         }
     </ul>
     <input type="submit" value="submit" />
