--- a/getdelays.be/Views/Station/GetStationsByName.cshtml
+++ b/getdelays.be/Views/Station/GetStationsByName.cshtml
@@ -153,7 +153,7 @@ function initMap() {
             {
                 <tr class="Departure">
                     <td>@s.departures[i].station</td>
-                    <td>@s.departures[i].tForView</td>
+                    <td>@s.departures[i].time</td>
                     <td>@s.departures[i].delay minutes</td>
                     <td>@Html.ActionLink(s.departures[i].vehicle, "GetTrain", "Train", routeValues: new { idTrain = s.departures[i].vehicle }, htmlAttributes: null)</td>
                 </tr>
