--- a/getdelays.be/Views/Shared/_Layout.cshtml
+++ b/getdelays.be/Views/Shared/_Layout.cshtml
@@ -13,45 +13,38 @@
     <script src="~/Scripts/latinise.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("GetDelays", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>
-                        @Html.ActionLink("See per stations", "SearchStation", "Station")
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        @Html.ActionLink("GetDelays", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation" style="">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    @Html.ActionLink("See per stations", "SearchStation", "Station"/*, new { @class = "nav-link" }*/)
+                </li>
+                <li class="nav-item">
+                    @Html.ActionLink("See Connection", "SearchConnection", "Connection", new { @class = "nav-link" })
+                </li>
+                @if (Session["user"] == null)
+                {
+                    <li class="nav-item">
+                        @Html.ActionLink("Log in", "ConnectionPage", "User", new { @class = "nav-link" })
                     </li>
-                    <li>
-                        @Html.ActionLink("See Connection", "SearchConnection", "Connection")
-                    </li>
-                        @if (Session["user"] == null)
-                        {
-                            <li>
-                                @Html.ActionLink("Log in", "ConnectionPage", "User")
-                            </li>
-                        }
-                        else
-                        {
-                            <li>
-                                @Html.ActionLink("Profile", "Index","User")
+                }
+                else
+                {
+                    <li class="nav-item">
+                        @Html.ActionLink("Profile", "Index", "User", new { @class = "nav-link" })
 
-                            </li>
-                            <li>
-                                @Html.ActionLink("Log off", "Disconnect", "User")
-                            </li>
-                        }
                     </li>
-                </ul>
-            </div>
+                    <li class="nav-item">
+                        @Html.ActionLink("Log off", "Disconnect", "User", new { @class = "nav-link" })
+                    </li>
+                }
+            </ul>
         </div>
-    </div>
+    </nav>
 
     <div class="container body-content">
         @RenderBody()
